Fixes the logo overlap

--- a/static/components/_sidebar.scss
+++ b/static/components/_sidebar.scss
@@ -57,6 +57,11 @@
         grid-row: 1 / 2;
         grid-column: 1 / 1;
         margin: auto 0;
+        padding-left: 3rem;
+      }
+
+      @media only screen and (max-width: $bp-sm) {
+        padding-left: 5rem;
       }
 
       h2 {
@@ -74,7 +79,7 @@
         }
 
         @media only screen and (max-width: $bp-sm) {
-          font-size: 4.5rem;
+          font-size: 4.25rem;
           margin-left: 5rem;
         }
 
@@ -83,7 +88,7 @@
         }
 
         @media only screen and (max-width: $bp-mobile-m) {
-          font-size: 2.85rem;
+          font-size: 2.75rem;
         }
 
         @media only screen and (max-width: $bp-mobile-s) {
